--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
-    <h1 data-value="Example">Example</h1>
-    <p>This is an example of a simple HTML file.</p>
+    <h1 data-value="Example">Tom Higginson</h1>
+    <p>Tom's Test Website.</p>
 </body>
 <script src="script.js"></script>
 </html>
