--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <link ref="stylesheet" type="text/css" href="style.css">
   <head>
-    <title>Example</title>
+    <title>Tom Higginson</title>
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
