--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
-    <h1 data-value="Example">Tom Higginson</h1>
+    <h1 data-value="Tom Higginson">Tom Higginson</h1>
     <p>Tom's Test Website.</p>
 </body>
 <script src="script.js"></script>
