--- a/PubLeaderboard/PubRankings_Extra.html
+++ b/PubLeaderboard/PubRankings_Extra.html
@@ -33,7 +33,7 @@
       vertical-align: bottom;
     }
     .beer-icon.half {
-      width: 10px; /* half width */
+      width: 10px; 
       opacity: 0.9;
     }
     .label {
