--- a/index.html
+++ b/index.html
@@ -5,9 +5,150 @@
     <title>Tom Higginson</title>
     <link rel="stylesheet" href="style.css">
 </head>
-  <body>
-    <h1 data-value="Tom Higginson">Tom Higginson</h1>
-    <p>Tom's Test Website.</p>
-</body>
+
+<nav>
+  <a data-value="Introduction" href="#introduction">Introduction</a>
+  <a data-value="Research" href="#research">Research</a>
+  <a data-value="Teaching" href="#Teaching">Teaching</a>
+  <a data-value="Academic" href="#Academic">Academic</a>
+  <a data-value="Interests" href="#Interests">Interests</a>
+  <a data-value="Pub Rankings" href="PubLeaderboard/PubRankings_Extra.html">Pub Rankings</a>
+  <a data-value="Predictions" href="Predictions/PremierLeagueGames.html">Predictions</a>
+</nav>
+<main>
+
+
+  <div class="row">
+    <img src="Images/Me.JPG" 
+    alt="desc"
+    style="height:230pt; width:auto"
+    >
+
+    <section id="introduction">
+      <h1 data-value="Tom Higginson">Tom Higginson</h1>
+      <p>
+        Welcome to my personal website.
+      </p>
+      <p>
+        Orignally from a large town in Surrey, 
+        I have been living in Bristol since September 2019.
+      </p>
+      <p>
+      I am a PhD Student at the University of Bristol 
+      researching Active Galaxies, my UoB page is available <a data-value="here" href="https://research-information.bris.ac.uk/en/persons/tom-s-higginson">here</a>.
+      </p>
+
+      <p>
+        Roots in Surrey soil, <br>
+        Bristol life since twenty-neinteen, <br>
+        PhD in bloom.
+      </p>
+    </section>
+  </div>
+  
+  <div class="row">
+    <section id="Research">
+      <h1 data-value="Research">Research</h1>
+
+      <p>
+        My research interest is focused around jets from actively accreting 
+        supermassive black holes - or Active Galactic Nuclei 
+        (AGN). Originally being interested in the effect on star formation, 
+        my research interest has now evolved to look at kpc-scale 'wings' 
+        that appear in some jetted sources.
+      </p>
+
+      <p>
+        I am part of the Black Hole group, in the astrophysics department
+        at the University of Bristol, which is lead by <a data-value="Andy Young."
+        href="https://phajy.github.io">Andy Young. </a>
+      </p>
+
+      <p>
+        I work mainly with X-ray and LOFAR (LOw Frequency ARray) observations and have joined the 
+        LOFAR-VLBI (Very Long Baseline Interferometery) collaboration.
+      </p>
+  
+    </section>
+
+
+
+    <img src="Images/MePresenting.JPG" 
+    alt="desc"
+    style="height:250pt; width:auto"
+    >
+ </div>
+
+  <div class="row">
+    <img src="Images/ViewFromPhysics.JPG" 
+    alt="desc"
+    style="height:210pt; width:auto"
+    >
+
+    
+    <section id="Teaching">
+    <h1 data-value="Teaching">Teaching</h1>  
+    I currently teach the following modules:
+    <ul>
+      <li>First Year Undergraduate Labs</li>
+      <li>First and Second Year General Drop In Sessions</li>
+      <li>First Year Stars and Planets (Marking Only)</li>
+    </ul>
+    I have previously taught the following modules:
+    <ul>
+      <li>Second Year Cosmology</li>
+    </ul>
+    </section>
+  </div>
+  
+  <div class="row">
+    <section id="Academic">
+      <h1 data-value="Academic">Academic</h1>
+      <p>
+        I currently work on active galaxies, specifically FRII Quasars with strong X-ray emission. 
+        I work with Chandra (X-ray), HST (optical) and VLA & LOFAR (Radio) using multiwavelength data to investigate emission mechanisms of 
+        active galaxies to understand the ongoing processes.
+
+        Recently I have gained an interest in Galaxies that have a distinct 'X'-shape in X-ray emission and LOFAR emission, 
+        such that there is emission near-prependicular to the jet axis.
+      </p>
+      <p>
+        Publications:
+        <ul>
+          <li>
+            Master's Thesis: 
+            <a data-value="Jets from 3CR 14 and 3CR 9" 
+            href="https://research-information.bris.ac.uk/en/studentTheses/x-ray-observations-of-radio-jets-from-3cr-14-and-3cr-9">
+            Jets from 3CR 14 and 3CR 9
+            </a>
+          </li>
+          <li> 
+            Papers:
+          </li>
+        </ul>
+      </p>
+      </section>
+  </div>
+
+  <div class="row">
+    <img src="Images/WokingFc.JPG" 
+    alt="desc"
+    style="height:150pt; width:auto"
+    >
+    <section id="Interests">
+      <h1 data-value="Interests">Interests</h1>
+      <p>
+      Along with Astrophysics I have a many other interests.
+      <ul>
+        <li>Football: I closely follow Woking FC and Southampton FC</li>
+        <li>Hiking: Anywhere is great but nothing beats a Mountain hike</li>
+        <li>Building a league table for Bristol <a data-value="Pub Rankings" href="PubLeaderboard/PubRankings_Extra.html">Pub Rankings</a> </li>
+      </ul>
+    </p>
+    </section>
+  </div>
+
+</main>
 <script src="script.js"></script>
 </html>
+
