Bug fix - version 1.0.1

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  </div>
 
   <div class="row">
-    <img src="Images/ViewFromPhysics.JPG" 
+    <img src="Images/ViewFromPhysics.jpg" 
     alt="desc"
     style="height:210pt; width:auto"
     >
@@ -131,7 +131,7 @@
   </div>
 
   <div class="row">
-    <img src="Images/WokingFc.JPG" 
+    <img src="Images/WokingFc.jpg" 
     alt="desc"
     style="height:150pt; width:auto"
     >
