Link Errors fixed update 1.0.2

--- a/Predictions/PremierLeagueGames.html
+++ b/Predictions/PremierLeagueGames.html
@@ -7,13 +7,13 @@
 </head>
 
 <nav>
-  <a data-value="Introduction" href="#introduction">Introduction</a>
-  <a data-value="Research" href="#research">Research</a>
-  <a data-value="Teaching" href="#Teaching">Teaching</a>
-  <a data-value="Academic" href="#Academic">Academic</a>
-  <a data-value="Interests" href="#Interests">Interests</a>
-  <a data-value="Pub Rankings" href="PubLeaderboard/PubRankings_Extra.html">Pub Rankings</a>
-  <a data-value="Predictions" href="Predictions/PremierLeagueGames.html">Predictions</a>
+  <a data-value="Introduction" href="../index.html#introduction">Introduction</a>
+  <a data-value="Research" href="../index.html#research">Research</a>
+  <a data-value="Teaching" href="../index.html#Teaching">Teaching</a>
+  <a data-value="Academic" href="../index.html#Academic">Academic</a>
+  <a data-value="Interests" href="../index.html#Interests">Interests</a>
+  <a data-value="Pub Rankings" href="../PubLeaderboard/PubRankings_Extra.html">Pub Rankings</a>
+  <a data-value="Predictions" href="../Predictions/PremierLeagueGames.html">Predictions</a>
 </nav>
 
 
