Fixing bug - Update 1.0.3

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </div>
 
   <div class="row">
-    <img src="Images/WokingFc.jpg" 
+    <img src="Images/WokingFC.jpg" 
     alt="desc"
     style="height:150pt; width:auto"
     >
