Bug fix - Update 1.0.5

--- a/PubLeaderboard/PubRankings_Extra.html
+++ b/PubLeaderboard/PubRankings_Extra.html
@@ -99,6 +99,7 @@ fluid ranking and will be constantly updating.
     "PreFood", "Foodage", "PreGuinness", "Guinness"
 ];
 
+// Change column names here, not on the CSV!!!
 const headerLabels = {
     Name: "Pub Name",
     Location: "Address",
