Adujusting Leaderboard - Update 1.0.6

--- a/Predictions/final_results.html
+++ b/Predictions/final_results.html
@@ -1,14 +1,211 @@
 
     <html><head><title>Predictor League Final Results</title>
     <style>
-      body { font-family: Arial, sans-serif; margin: 20px; }
-      table { border-collapse: collapse; width: 100%; margin-bottom: 2em; }
-      th, td { border: 1px solid #ccc; padding: 5px 10px; }
-      th { background: #eee; }
-      .score { text-align: center; font-weight: bold; }
-      h2 { margin-top: 40px; }
+    body { 
+      font-family: Arial, sans-serif; 
+      background: #460001;
+      padding: 20px;
+      color: white;
+      }
+      table { 
+      border-collapse: collapse;
+      width: 100%; 
+      background: rgb(8, 2, 35);
+      margin-bottom: 2em; 
+      }
+      th, td { 
+      border: 1px solid #ccc; 
+      padding: 5px 10px; 
+      }
+      th { 
+      background-color: #034f27; 
+      }
+      .score { 
+      text-align: center; 
+      font-weight: bold; 
+      }
+      h2 { 
+      margin-top: 40px; 
+      }
     </style>
     </head><body>
     <h1>Predictor League - Final Results</h1>
     Tables are pulled directly from the bbc sports website
-    <h2>Premier League - Actual Table</h2><table><thead><tr><th>Position</th><th>Team</th><th>Points</th></tr></thead><tbody><tr><td>1</td><td>AFC Bournemouth</td><td>0</td></tr><tr><td>2</td><td>Arsenal</td><td>0</td></tr><tr><td>3</td><td>Aston Villa</td><td>0</td></tr><tr><td>4</td><td>Brentford</td><td>0</td></tr><tr><td>5</td><td>Brighton & Hove Albion</td><td>0</td></tr><tr><td>6</td><td>Burnley</td><td>0</td></tr><tr><td>7</td><td>Chelsea</td><td>0</td></tr><tr><td>8</td><td>Crystal Palace</td><td>0</td></tr><tr><td>9</td><td>Everton</td><td>0</td></tr><tr><td>10</td><td>Fulham</td><td>0</td></tr><tr><td>11</td><td>Leeds United</td><td>0</td></tr><tr><td>12</td><td>Liverpool</td><td>0</td></tr><tr><td>13</td><td>Manchester City</td><td>0</td></tr><tr><td>14</td><td>Manchester United</td><td>0</td></tr><tr><td>15</td><td>Newcastle United</td><td>0</td></tr><tr><td>16</td><td>Nottingham Forest</td><td>0</td></tr><tr><td>17</td><td>Sunderland</td><td>0</td></tr><tr><td>18</td><td>Tottenham Hotspur</td><td>0</td></tr><tr><td>19</td><td>West Ham United</td><td>0</td></tr><tr><td>20</td><td>Wolverhampton Wanderers</td><td>0</td></tr></tbody></table><h2>Predictions & Scores for Lewis</h2><h3>Premier League</h3><table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points</th><th>Score</th></tr></thead><tbody><tr><td>1</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td></tr><tr><td>2</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td></tr><tr><td>3</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>4</td></tr><tr><td>4</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td></tr><tr><td>5</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td></tr><tr><td>6</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td></tr><tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td></tr><tr><td>8</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td></tr><tr><td>9</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>4</td></tr><tr><td>10</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td></tr><tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td></tr><tr><td>12</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>2</td></tr><tr><td>13</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td></tr><tr><td>14</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td></tr><tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td></tr><tr><td>16</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td></tr><tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td></tr><tr><td>18</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td></tr><tr><td>19</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td></tr><tr><td>20</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td></tr></tbody></table></body></html>
+    <h2>Leaderboard</h2><table><thead><tr><th>Player</th><th>Premier League</th><th>Championship</th><th>Total</th></tr></thead><tbody><tr><td>Cai</td><td>69</td><td>54</td><td><strong>123</strong></td></tr><tr><td>Tom</td><td>55</td><td>55</td><td><strong>110</strong></td></tr><tr><td>Lewis</td><td>45</td><td>0</td><td><strong>45</strong></td></tr></tbody></table>
+<h2>Premier League - Actual Table</h2>
+<table><thead><tr><th>Position</th><th>Team</th><th>Points</th></tr></thead><tbody>
+<tr><td>1</td><td>AFC Bournemouth</td><td>0</td></tr>
+<tr><td>2</td><td>Arsenal</td><td>0</td></tr>
+<tr><td>3</td><td>Aston Villa</td><td>0</td></tr>
+<tr><td>4</td><td>Brentford</td><td>0</td></tr>
+<tr><td>5</td><td>Brighton & Hove Albion</td><td>0</td></tr>
+<tr><td>6</td><td>Burnley</td><td>0</td></tr>
+<tr><td>7</td><td>Chelsea</td><td>0</td></tr>
+<tr><td>8</td><td>Crystal Palace</td><td>0</td></tr>
+<tr><td>9</td><td>Everton</td><td>0</td></tr>
+<tr><td>10</td><td>Fulham</td><td>0</td></tr>
+<tr><td>11</td><td>Leeds United</td><td>0</td></tr>
+<tr><td>12</td><td>Liverpool</td><td>0</td></tr>
+<tr><td>13</td><td>Manchester City</td><td>0</td></tr>
+<tr><td>14</td><td>Manchester United</td><td>0</td></tr>
+<tr><td>15</td><td>Newcastle United</td><td>0</td></tr>
+<tr><td>16</td><td>Nottingham Forest</td><td>0</td></tr>
+<tr><td>17</td><td>Sunderland</td><td>0</td></tr>
+<tr><td>18</td><td>Tottenham Hotspur</td><td>0</td></tr>
+<tr><td>19</td><td>West Ham United</td><td>0</td></tr>
+<tr><td>20</td><td>Wolverhampton Wanderers</td><td>0</td></tr>
+</tbody></table>
+<h2>Championship - Actual Table</h2>
+<table><thead><tr><th>Position</th><th>Team</th><th>Points</th></tr></thead><tbody>
+<tr><td>1</td><td>Birmingham City</td><td>0</td></tr>
+<tr><td>2</td><td>Blackburn Rovers</td><td>0</td></tr>
+<tr><td>3</td><td>Bristol City</td><td>0</td></tr>
+<tr><td>4</td><td>Charlton Athletic</td><td>0</td></tr>
+<tr><td>5</td><td>Coventry City</td><td>0</td></tr>
+<tr><td>6</td><td>Derby County</td><td>0</td></tr>
+<tr><td>7</td><td>Hull City</td><td>0</td></tr>
+<tr><td>8</td><td>Ipswich Town</td><td>0</td></tr>
+<tr><td>9</td><td>Leicester City</td><td>0</td></tr>
+<tr><td>10</td><td>Middlesbrough</td><td>0</td></tr>
+<tr><td>11</td><td>Millwall</td><td>0</td></tr>
+<tr><td>12</td><td>Norwich City</td><td>0</td></tr>
+<tr><td>13</td><td>Oxford United</td><td>0</td></tr>
+<tr><td>14</td><td>Portsmouth</td><td>0</td></tr>
+<tr><td>15</td><td>Preston North End</td><td>0</td></tr>
+<tr><td>16</td><td>Queens Park Rangers</td><td>0</td></tr>
+<tr><td>17</td><td>Sheffield United</td><td>0</td></tr>
+<tr><td>18</td><td>Sheffield Wednesday</td><td>0</td></tr>
+<tr><td>19</td><td>Southampton</td><td>0</td></tr>
+<tr><td>20</td><td>Stoke City</td><td>0</td></tr>
+<tr><td>21</td><td>Swansea City</td><td>0</td></tr>
+<tr><td>22</td><td>Watford</td><td>0</td></tr>
+<tr><td>23</td><td>West Bromwich Albion</td><td>0</td></tr>
+<tr><td>24</td><td>Wrexham</td><td>0</td></tr>
+</tbody></table>
+<h2>Predictions & Scores for Lewis (Total: 45)</h2>
+<h3>Premier League (Score: 45)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>4</td></tr>
+<tr><td>3</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>4</td><td>8</td></tr>
+<tr><td>4</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>10</td></tr>
+<tr><td>5</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>12</td></tr>
+<tr><td>6</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>14</td></tr>
+<tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>16</td></tr>
+<tr><td>8</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>18</td></tr>
+<tr><td>9</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>4</td><td>22</td></tr>
+<tr><td>10</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>24</td></tr>
+<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>27</td></tr>
+<tr><td>12</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>2</td><td>29</td></tr>
+<tr><td>13</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>31</td></tr>
+<tr><td>14</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>33</td></tr>
+<tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td><td>35</td></tr>
+<tr><td>16</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>37</td></tr>
+<tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>39</td></tr>
+<tr><td>18</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>41</td></tr>
+<tr><td>19</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>43</td></tr>
+<tr><td>20</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td><td>45</td></tr>
+</tbody></table>
+<h2>Predictions & Scores for Cai (Total: 123)</h2>
+<h3>Premier League (Score: 69)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>10</td><td>12</td></tr>
+<tr><td>3</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>14</td></tr>
+<tr><td>4</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>16</td></tr>
+<tr><td>5</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>3</td><td>19</td></tr>
+<tr><td>6</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>21</td></tr>
+<tr><td>7</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>23</td></tr>
+<tr><td>8</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>25</td></tr>
+<tr><td>9</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>4</td><td>29</td></tr>
+<tr><td>10</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>10</td><td>39</td></tr>
+<tr><td>11</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>41</td></tr>
+<tr><td>12</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>43</td></tr>
+<tr><td>13</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>45</td></tr>
+<tr><td>14</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>47</td></tr>
+<tr><td>15</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>49</td></tr>
+<tr><td>16</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>10</td><td>59</td></tr>
+<tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>61</td></tr>
+<tr><td>18</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>4</td><td>65</td></tr>
+<tr><td>19</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td><td>67</td></tr>
+<tr><td>20</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>69</td></tr>
+</tbody></table>
+<h3>Championship (Score: 54)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Leicester City</td><td>9</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Sheffield United</td><td>17</td><td>0</td><td class='score'>2</td><td>4</td></tr>
+<tr><td>3</td><td>Birmingham City</td><td>1</td><td>0</td><td class='score'>2</td><td>6</td></tr>
+<tr><td>4</td><td>Wrexham</td><td>24</td><td>0</td><td class='score'>2</td><td>8</td></tr>
+<tr><td>5</td><td>Southampton</td><td>19</td><td>0</td><td class='score'>2</td><td>10</td></tr>
+<tr><td>6</td><td>Coventry City</td><td>5</td><td>0</td><td class='score'>4</td><td>14</td></tr>
+<tr><td>7</td><td>West Bromwich Albion</td><td>23</td><td>0</td><td class='score'>2</td><td>16</td></tr>
+<tr><td>8</td><td>Norwich City</td><td>12</td><td>0</td><td class='score'>3</td><td>19</td></tr>
+<tr><td>9</td><td>Swansea City</td><td>21</td><td>0</td><td class='score'>2</td><td>21</td></tr>
+<tr><td>10</td><td>Ipswich Town</td><td>8</td><td>0</td><td class='score'>3</td><td>24</td></tr>
+<tr><td>11</td><td>Stoke City</td><td>20</td><td>0</td><td class='score'>2</td><td>26</td></tr>
+<tr><td>12</td><td>Bristol City</td><td>3</td><td>0</td><td class='score'>2</td><td>28</td></tr>
+<tr><td>13</td><td>Watford</td><td>22</td><td>0</td><td class='score'>2</td><td>30</td></tr>
+<tr><td>14</td><td>Oxford United</td><td>13</td><td>0</td><td class='score'>4</td><td>34</td></tr>
+<tr><td>15</td><td>Middlesbrough</td><td>10</td><td>0</td><td class='score'>2</td><td>36</td></tr>
+<tr><td>16</td><td>Millwall</td><td>11</td><td>0</td><td class='score'>2</td><td>38</td></tr>
+<tr><td>17</td><td>Blackburn Rovers</td><td>2</td><td>0</td><td class='score'>2</td><td>40</td></tr>
+<tr><td>18</td><td>Queens Park Rangers</td><td>16</td><td>0</td><td class='score'>2</td><td>42</td></tr>
+<tr><td>19</td><td>Portsmouth</td><td>14</td><td>0</td><td class='score'>2</td><td>44</td></tr>
+<tr><td>20</td><td>Preston North End</td><td>15</td><td>0</td><td class='score'>2</td><td>46</td></tr>
+<tr><td>21</td><td>Derby County</td><td>6</td><td>0</td><td class='score'>2</td><td>48</td></tr>
+<tr><td>22</td><td>Charlton Athletic</td><td>4</td><td>0</td><td class='score'>2</td><td>50</td></tr>
+<tr><td>23</td><td>Hull City</td><td>7</td><td>0</td><td class='score'>2</td><td>52</td></tr>
+<tr><td>24</td><td>Sheffield Wednesday</td><td>18</td><td>0</td><td class='score'>2</td><td>54</td></tr>
+</tbody></table>
+<h2>Predictions & Scores for Tom (Total: 110)</h2>
+<h3>Premier League (Score: 55)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>4</td></tr>
+<tr><td>3</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>4</td><td>8</td></tr>
+<tr><td>4</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>10</td></tr>
+<tr><td>5</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>12</td></tr>
+<tr><td>6</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>14</td></tr>
+<tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>16</td></tr>
+<tr><td>8</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>18</td></tr>
+<tr><td>9</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>4</td><td>22</td></tr>
+<tr><td>10</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>24</td></tr>
+<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>27</td></tr>
+<tr><td>12</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>29</td></tr>
+<tr><td>13</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>31</td></tr>
+<tr><td>14</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>33</td></tr>
+<tr><td>15</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>35</td></tr>
+<tr><td>16</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>37</td></tr>
+<tr><td>17</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>4</td><td>41</td></tr>
+<tr><td>18</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>43</td></tr>
+<tr><td>19</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>10</td><td>53</td></tr>
+<tr><td>20</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td><td>55</td></tr>
+</tbody></table>
+<h3>Championship (Score: 55)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Ipswich Town</td><td>8</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Birmingham City</td><td>1</td><td>0</td><td class='score'>4</td><td>6</td></tr>
+<tr><td>3</td><td>Leicester City</td><td>9</td><td>0</td><td class='score'>2</td><td>8</td></tr>
+<tr><td>4</td><td>Southampton</td><td>19</td><td>0</td><td class='score'>2</td><td>10</td></tr>
+<tr><td>5</td><td>Sheffield United</td><td>17</td><td>0</td><td class='score'>2</td><td>12</td></tr>
+<tr><td>6</td><td>Coventry City</td><td>5</td><td>0</td><td class='score'>4</td><td>16</td></tr>
+<tr><td>7</td><td>Norwich City</td><td>12</td><td>0</td><td class='score'>3</td><td>19</td></tr>
+<tr><td>8</td><td>Wrexham</td><td>24</td><td>0</td><td class='score'>2</td><td>21</td></tr>
+<tr><td>9</td><td>Middlesbrough</td><td>10</td><td>0</td><td class='score'>4</td><td>25</td></tr>
+<tr><td>10</td><td>West Bromwich Albion</td><td>23</td><td>0</td><td class='score'>2</td><td>27</td></tr>
+<tr><td>11</td><td>Bristol City</td><td>3</td><td>0</td><td class='score'>2</td><td>29</td></tr>
+<tr><td>12</td><td>Stoke City</td><td>20</td><td>0</td><td class='score'>2</td><td>31</td></tr>
+<tr><td>13</td><td>Watford</td><td>22</td><td>0</td><td class='score'>2</td><td>33</td></tr>
+<tr><td>14</td><td>Millwall</td><td>11</td><td>0</td><td class='score'>2</td><td>35</td></tr>
+<tr><td>15</td><td>Swansea City</td><td>21</td><td>0</td><td class='score'>2</td><td>37</td></tr>
+<tr><td>16</td><td>Derby County</td><td>6</td><td>0</td><td class='score'>2</td><td>39</td></tr>
+<tr><td>17</td><td>Blackburn Rovers</td><td>2</td><td>0</td><td class='score'>2</td><td>41</td></tr>
+<tr><td>18</td><td>Queens Park Rangers</td><td>16</td><td>0</td><td class='score'>2</td><td>43</td></tr>
+<tr><td>19</td><td>Charlton Athletic</td><td>4</td><td>0</td><td class='score'>2</td><td>45</td></tr>
+<tr><td>20</td><td>Hull City</td><td>7</td><td>0</td><td class='score'>2</td><td>47</td></tr>
+<tr><td>21</td><td>Preston North End</td><td>15</td><td>0</td><td class='score'>2</td><td>49</td></tr>
+<tr><td>22</td><td>Oxford United</td><td>13</td><td>0</td><td class='score'>2</td><td>51</td></tr>
+<tr><td>23</td><td>Portsmouth</td><td>14</td><td>0</td><td class='score'>2</td><td>53</td></tr>
+<tr><td>24</td><td>Sheffield Wednesday</td><td>18</td><td>0</td><td class='score'>2</td><td>55</td></tr>
+</tbody></table>
+</body></html>
