--- a/PubLeaderboard/PubRankings_Extra.html
+++ b/PubLeaderboard/PubRankings_Extra.html
@@ -7,13 +7,14 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f9f9f9;
+      background: #450202;
       padding: 20px;
+      color: white
     }
     table {
       border-collapse: collapse;
       width: 100%;
-      background: white;
+      background: rgb(8, 2, 35);
     }
     th, td {
       padding: 8px;
@@ -23,7 +24,7 @@
     }
     th {
       cursor: pointer;
-      background-color: #f1f1f1;
+      background-color: #05331b;
       user-select: none;
     }
     .beer-icon {
@@ -78,13 +79,13 @@
 <body>
 
 <h2>Ben and Tom's Pub League Table 🍻</h2>
-
+<p>
 This is not a complete list of Bristol pubs but it comprises 
 a collection of pubs that both Ben and I have visited and
 ranked. We have not been able to apply a score for some catagories
 and those ones are indicated with "to be revisited". This is also a 
 fluid ranking and will be constantly updating.
-
+</p>
 <table id="leaderboard">
   <thead>
     <tr id="header-row"></tr>
