Leaderboard Update - Version 1.0.7

--- a/PubLeaderboard/PubRankings_Extra.html
+++ b/PubLeaderboard/PubRankings_Extra.html
@@ -86,6 +86,17 @@ ranked. We have not been able to apply a score for some catagories
 and those ones are indicated with "to be revisited". This is also a 
 fluid ranking and will be constantly updating.
 </p>
+
+<p>
+Each catagory is scored out of 5 by Ben and I, 
+which is indicated with the beer glass, 
+the total is shown by the green bar below.
+You can sort by any catagory's total score by clicking the header.
+The name column will sort alphabetically and the location will sort on postcode.
+We are currently working on making the location more user-friendly to sort by and linking
+each pub to the Butcombe Pubstops of Bristol map. 
+</p>
+
 <table id="leaderboard">
   <thead>
     <tr id="header-row"></tr>
