Adding AB to the predictor league Version 1.0.8

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <p>
         Roots in Surrey soil, <br>
-        Bristol life since twenty-neinteen, <br>
+        Bristol life since twenty-nineteen, <br>
         PhD in bloom.
       </p>
     </section>
