Adding in the Ones to Watch, version 1.1.0

--- a/Predictions/PremierLeagueGames.html
+++ b/Predictions/PremierLeagueGames.html
@@ -37,9 +37,9 @@
   
   <section>
     <p>
-  <a data-value="Ones to Watch" href="pending.html">Ones to Watch</a>
+  <a data-value="Ones to Watch" href="../WeeklyGame/WeeklyPredictions_Bristol.html">Ones to Watch</a>
     </p>
-  An ongoing team-backer for the premier league (page to go live soon). 
+  An ongoing result-backer for the premier league is now live. 
   </section>
 </div>
 
