Improved Visuals and Scores - Version 1.1.2

--- a/WeeklyGame/WeeklyPredictions_Bristol.html
+++ b/WeeklyGame/WeeklyPredictions_Bristol.html
@@ -79,6 +79,35 @@
             return "wrong";
         }
 
+         const teamColours = {
+            "Arsenal": { bg: "#EF0107", fg: "#FFFFFF" },
+            "Aston Villa": { bg: "#95BFE5", fg: "#670E36" },
+            "AFC Bournemouth": { bg: "#DA291C", fg: "#000000" },
+            "Brighton & Hove Albion": { bg: "#0057B8", fg: "#FFFFFF" },
+            "Brentford": { bg: "#e30613", fg: "#ffffff" },
+            "Burnley": { bg: "#6C1D45", fg: "#99D6EA" },
+            "Chelsea": { bg: "#034694", fg: "#FFFFFF" },
+            "Crystal Palace": { bg: "#1B458F", fg: "#C4122E" },
+            "Everton": { bg: "#003399", fg: "#FFFFFF" },
+            "Fulham": { bg: "#FFFFFF", fg: "#000000" },
+            "Leeds United": { bg: "#FFFFF", fg: "#0060A9" },
+            "Liverpool": { bg: "#C8102E", fg: "#00B2A9" },
+            "Manchester City": { bg: "#6CABDD", fg: "#1C2C5B" },
+            "Manchester United": { bg: "#DA291C", fg: "#FBE122" },
+            "Newcastle United": { bg: "#241F20", fg: "#FFFFFF" },
+            "Nottingham Forest": { bg: "#E53233", fg: "#FFFFFF" },
+            "Sunderland": { bg: "#FFFFFF", fg: "#EB172B" },
+            "Tottenham Hotspur": { bg: "#132257", fg: "#FFFFFF" },
+            "West Ham United": { bg: "#7A263A", fg: "#1BB1E7" },
+            "Wolverhampton Wanderers": { bg: "#FDB913", fg: "#231F20" },
+            "draw": { bg: "#A9A5AD", fg: "#FFFFFF" },
+        };
+
+        function teamCell(team) {
+        const c = teamColours[team] || { bg: "#fff", fg: "#000" };
+        return `<td style="background:${c.bg}; color:${c.fg}; font-weight:bold;">${team}</td>`;
+        }
+
         async function init() {
             const fixtures = await loadCSV("fixtures.csv");
             const predictions = await loadCSV("weekly_predictions_Bristol.csv");
@@ -123,9 +152,9 @@
                         }
 
                         resultsHTML += `<tr>
-                            <td>${g.Home}</td>
+                            ${teamCell(g.Home)}
                             <td>${g.HomeScore || ""} - ${g.AwayScore || ""}</td>
-                            <td>${g.Away}</td>
+                            ${teamCell(g.Away)}
                             <td>${predText}</td>
                         </tr>`;
                     }
@@ -157,13 +186,16 @@
 
                     let predText = "";
                     if (matchPreds.length > 0) {
-                        predText = matchPreds.map(p => `${p.Player}: ${p.Prediction}`).join("<br>");
-                    }
+                        predText = matchPreds.map(p => {
+                        const colour = teamColours[p.Prediction] || "#241F20";
+                    return `${p.Player}: <span style="background:${colour.bg}; color:${colour.fg}; font-weight:bold; padding:2px 6px; border-radius:4px;">${p.Prediction}</span>`;
+                }).join("<br>");
+            }
 
                     upcomingHTML += `<tr>
-                        <td>${g.Home}</td>
-                        <td>vs</td>
-                        <td>${g.Away}</td>
+                        ${teamCell(g.Home)}
+                        <td>${g.HomeScore || ""} - ${g.AwayScore || ""}</td>
+                        ${teamCell(g.Away)}
                         <td>${predText}</td>
                     </tr>`;
                 }
