--- a/WeeklyGame/WeeklyPredictions_Woking.html
+++ b/WeeklyGame/WeeklyPredictions_Woking.html
@@ -48,7 +48,7 @@
         <div id="leaderboard"></div>
     </section>
 
-    <script src="../teamData.js"></script>
+    <script src="../TeamData.js"></script>
     <script>
         function showTab(id) {
             document.querySelectorAll("section").forEach(sec => sec.classList.remove("active"));
