Teaser for 2026/27 and final predictions for GW2

--- a/Predictions/PremierLeagueGames.html
+++ b/Predictions/PremierLeagueGames.html
@@ -34,7 +34,7 @@
       We have a final table predictor for the Premier League and the Championship.
     </p>
   </section>
-  
+  </div>
   <section>
     <p>
   <a data-value="Games to Watch - Bristol" href="../WeeklyGame/WeeklyPredictions_Bristol.html">Games to Watch - Bristol</a>
@@ -48,7 +48,16 @@
     </p>
   An ongoing result-backer for the premier league is now live. 
   </section>
-</div>
+  <section>
+    <p>
+  <a data-value="To be Created" href="">Fantasy Club Football</a>
+    </p>
+  Watch this space, we are currently working on a new game that will launch for the 2026-27 season.
+  This will be bigger and better than ever before.
+  <br>
+  The game is simple, pick your teams, enjoy the season, and win prizes.
+  </section>
+
 
 </main>
 
