Fixing Scrolling on leaderboard

--- a/PubLeaderboard/PubRankings_Extra.html
+++ b/PubLeaderboard/PubRankings_Extra.html
@@ -74,6 +74,12 @@
     white-space: nowrap;
     width: 110px;
     }
+    #leaderboard thead th {
+    position: sticky;
+    top: -1px; 
+    background-color: #05331b;
+    z-index: 5;
+}
   </style>
 </head>
 <body>
